vertical scroller -> text fade fixed not like text behind text

--- a/src/styles/vertical-showcase-slider.css
+++ b/src/styles/vertical-showcase-slider.css
@@ -154,7 +154,7 @@
   }
   
   .engagement-right {
-    width: 100%;
+    width: 85%;
   }
 
   .company-logo-bg {
